--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     font-style: normal;
 }
 
+:root {
+    --btn-color-green: rgb(82, 181, 82);
+    --btn-color-blue: rgb(82, 120, 181);
+    --btn-color-lightblue: rgb(82, 160, 181);
+}
+
 html {
 
 }
@@ -62,20 +68,23 @@ h3 {
     height: 30px;
 }
 
-
 #generate-button {
-    border-color: rgb(82, 181, 82);
-    color: rgb(82, 181, 82);  
+    border-color: var(--btn-color-green);
+    color: var(--btn-color-green);  
 }
 
 #generate-button:hover {
-    background-color: rgb(82, 181, 82);
+    background-color: var(--btn-color-green);
     color: white;
 }
 
 #execute-button {
     border-color: rgb(82, 120, 181);
     color: rgb(82, 120, 181);
+}
+
+button:hover { 
+    cursor: pointer;
 }
 
 #execute-button:hover {
@@ -93,20 +102,39 @@ h3 {
     color: white;
 }
 
-#lexical-table {
+#results {
+    visibility: hidden;
+    margin-top: 20px;
+    border: rgba(191, 191, 191, 0.61) solid 1px;
+    border-radius: .25rem;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+#results-table {
+    width: 98%;
     display: flex;
     flex-flow: column;
 }
 
-#table-head {
+
+#table-head tr {
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
 tr {
     display: flex;
     
+}
+
+th {
+    border: rgba(191, 191, 191, 0.61) solid 1px;
+    flex-grow: 1;
+    font-weight: bold;
 }
 
 #table-head-main-element {
